[package]
name = "text-summarize"
version = "0.1.0"
authors = ["natefinger"]
edition = "2018"
description="A function which takes text and summarizes it in 5 lines"
repository = "https://github.com/Nfinger/text-summarize"
keywords = ["text", "summarize"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
