[package]
name = "text-summarize"
version = "0.1.1"
authors = ["natefinger"]
edition = "2018"
description="A function which takes text and summarizes it in 5 lines"
repository = "https://github.com/Nfinger/text-summarize"
keywords = ["text", "summarize"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.48"
serde = { version = "1.0.101", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
